# ssl-autoref

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  autoref.cc  autoref.h  autoref_main.cc  base_ref.cc  base_ref.h  build.sh  cmake.sh  eval_ref.cc  eval_ref.h  events.cc  events.h  gui_autoref_main.cc  install.sh  rconclient.cc  rconclient.h  ref_states.def  run.sh  touches.cc  touches.h
gui/: colors.h  control_frame.cc  control_frame.h  event_types.cc  event_types.h  field_panel.cc  field_panel.h  gui_utils.cc  gui_utils.h  history_item.cc  history_item.h  history_panel.cc  history_panel.h  info_panel.cc  info_panel.h  style.h
proto/: drawing.proto  game_event.proto  rcon.proto  referee.proto  referee_call.proto  referee_update.proto  ssl_autoref.proto  ssl_referee.proto
shared/: constants.cc  constants.h  geomalgo.h  gvector.h  optionparser.h  runqueue.h  tracker.cc  tracker.h  udp.cc  udp.h  util.cc  util.h  world.h
